2006-05-27  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/system.cc (get_paper_systems): uniq all_elements_ , to
	prevent duplicated broken items in output.

	* scm/framework-eps.scm (output-classic-framework): only dump if
	dump-signatures is set.

	* scm/lily.scm (define-scheme-options): add dump-signatures option.

	* scm/stencil.scm (write-system-signature): new routine: write
	python parseable signature of a separate paper system.

2006-05-26  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/stanza-number-engraver.cc (process_music): use is_markup()
	iso is_string().
	include header.

2006-05-25  Erik Sandberg  <mandolaerik@gmail.com>

	* translator-group.cc: send music events to engravers in
	non-bottom contexts.

	* tuplet-engraver.cc: process tuplet brackets in correct order.

2006-05-24  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* stepmake/aclocal.m4: STEPMAKE_PYTHON(): clear cached value since
	arg 2 might point us to a new binary (patch by Karl Hammar)
	
2006-05-24  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): release 2.9.6

	* Documentation/topdocs/NEWS.tely (Top): trim explanation. 

	* Documentation/user/*.itely: 2nd
	attempt: replace funindex -> findex globally.

2006-05-24  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* input/no-notation/display-lily-tests.ly: fix \applyOutput
	test. Add \break, \pageBreak, \pageTurn, etc, tests.

	* scm/define-music-display-methods.scm: display methods for
	breaks. Fix \applyOutput.

2006-05-24  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/user/macros.itexi: comment out funindex expansion. 

	* Documentation/user/music-glossary.tely: junk \oldaddlyrics
	everywhere.

	* GNUmakefile.in: fix wildcarding for scrips/out/ links. Thanks
	Karl Hammar. Backportme.
 
	* Documentation/user/advanced-notation.itely (Balloon help): idem.

	* Documentation/user/changing-defaults.itely (Creating contexts): idem.

	* Documentation/user/programming-interface.itely (Running a